# RubberbandUGen

./: CMakeLists.txt  README.md
source/RubberbandUGens/: RubberbandPitchShift.cpp  RubberbandPitchShift.sc
